# quibble

./: .clang-format  .gitignore  CMakeLists.txt  Cargo.toml  build.rs  qemu.sh  todo.org
.cargo/: config
qemu/: env.sh  freeldr.ini.in  nbd-mount.sh  qemu.cmake  qemu.sh
qemu/esp/EFI/BOOT/: freeldr.ini
quibble-rs/: Cargo.toml  build.rs  cbindgen.toml
quibble-rs/include/: quibble-rs.h  quibble-rs_inner.h
quibble-rs/src/: allocator.rs  ini.rs  lib.rs
src/: apiset.cpp  boot.cpp  debug.cpp  hw.cpp  main.rs  mem.cpp  menu.cpp  misc.cpp  misc.h  peload.cpp  peload.h  peloaddef.h  print.cpp  print.h  quibble.h  quibbleproto.h  range.hpp  reg.cpp  reg.h  tinymt32.cpp  tinymt32.h  win.h  winreg.h  x86.h
