[package]
name = "quibble"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[[bin]]
name = "quibble"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
quibble-rs = {path= "./quibble-rs"}

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
cbindgen = "*"
cmake = "0.1"