[package]
name = "quibble-rs"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
# crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
uefi = {version = "0.24.0", features = ["alloc"]}
raw-cpuid = "10.0"
x86_64 = "0.14"

[build-dependencies]
cbindgen = "*"